# chat_mini

./: .gitignore
backend/: pyproject.toml
backend/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_room_name_alter_room_slug.py  0002_remove_room_members_room_members.py  0003_alter_room_name_alter_room_slug.py
backend/config/: asgi.py  settings.py  urls.py
backend/users/: urls.py
